<resources>
    <string name="app_name"></string>
    `   <string name="action_settings">Settings</string>
    <string name="sort_by_rating">vote_average.decs</string>
    <string name="ratings_sort_params">vote_count.gte=50&amp;include_video=false</string>
    <string name="sort_by_popularity">popularity.desc</string>
    <string name="popularity_sort_params"> </string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="text_videos">Official Trailer:</string>
    <string name="text_more">Read More</string>
    <string name="text_less">Show Less</string>
    <string name="fav_text">Favorited!</string>
    <string name="unfav_text">Unfavorited</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="movie_name_placeholder">Movie Name</string>
    <string name="movie_release_placeholder">October 11, 1988</string>
    <string name="movie_rating_text_placeholder">Header Movie</string>
    <string name="movie_fav_intro">Add To Favorites</string>
    <string name="movie_desc_place_holder">Lorem iasda sdakds akdsakd sdkads</string>
    <string name="review_author_placeholder">Author</string>
    <string name="review_content_placeholder">Lorem iasda sdakds akdsakd sdkads</string>
    <string name="trailer_name_placeholder">A New Trailer</string>
    <string name="search_hint">Search for movies...</string>
    <string name="open_drawer">Favorites</string>
    <string name="close_drawer_text_placeholder"> </string>
    <string name="youtube_viewing_tip">To get a better view of this trailer, rotate and view in landscape mode.</string>
    <string name="runtime">Run Time: %1$d Minutes</string>
    <string name="rating_value">Rated: %1$.1f / 10 </string>
    <string name="synopsis">Synopsis \n \n %1$s</string>
    <string name="release_date">Released: %1$s</string>
    <string name="swipe_instructions">Swipe to the left to remove from favorites.</string>
    <string name="fab_scroll_instructions">Click the Up Fab to Read More and Add to Favorites.</string>

</resources>
