<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reviewItem"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reviewItemCardWrap"
        card_view:contentPadding="@dimen/card_padding"
        card_view:cardElevation="@dimen/card_elevation"
        card_view:cardCornerRadius="@dimen/card_radius"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reviewItemInnerWrap"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_author_placeholder"
                android:id="@+id/reviewAuthor"
                android:textSize="@dimen/review_card_padding"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review_content_placeholder"
                android:id="@+id/reviewContent"/>


            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/readmorewrap"
                android:layout_marginTop="@dimen/spacing5dp"
                card_view:cardBackgroundColor="@color/black"
                card_view:contentPadding="@dimen/card_padding"
                card_view:cardElevation="@dimen/card_elevation"
                card_view:cardCornerRadius="@dimen/card_radius"
                card_view:cardUseCompatPadding="true">
                <TextView
                    android:background="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing5dp"
                    android:text="@string/text_more"
                    android:id="@+id/statusCollapsed"
                    android:textColor="@color/colorWhite"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>